--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_LOGS" />
+	<uses-permission android:name="android.permission.GET_TASKS"/>
 	<uses-permission android:name="android.permission.VIBRATE" />  
-    <application
+	<application
         android:allowBackup="true"
 		android:name=".overallSituationContext"
         android:icon="@drawable/ic_launcher"
