--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ryuunoakaihitomi.ForceCloseLogcat"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 23
-        versionName "4.2_バグ有るから...でも俺約束守る事出来ない...悪い人に成りたくない...."
+        versionCode 24
+        versionName "5_龍門飛び込む"
     }
     buildTypes {
         release {
