--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+			android:excludeFromRecents="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,7 +23,8 @@
         </activity>
 		<activity
 			android:name=".LogReader"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+			android:excludeFromRecents="true">
 		</activity>
 		<activity
 			android:name=".HelpView"
