--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ryuunoakaihitomi.ForceCloseLogcat"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 25
-        versionName "　 "
+        versionCode 26
+        versionName "5.1"
     }
     buildTypes {
         release {
